[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/interactions/notecard.png" type="Texture" id=1]
[ext_resource path="res://scenes/buttons/buttongroups/callingcards.tres" type="ButtonGroup" id=2]
[ext_resource path="res://assets/fonts/Merchant Copy Doublesize.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/Merchant Copy.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/NoteCardEventPlayer.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=5]
size = 18
outline_size = 1
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("NinePatchRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("NinePatchRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("NinePatchRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="NoteCardEventPlayer" type="CanvasLayer"]
script = ExtResource( 5 )
data_file = "res://assets/interactions/data.json"
group = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 248.0
margin_top = 100.0
margin_right = 764.0
margin_bottom = 448.0
texture = ExtResource( 1 )
region_rect = Rect2( 17.7647, 38.359, 187.318, 139.234 )
patch_margin_left = 1
patch_margin_top = 9

[node name="ToLabel" type="RichTextLabel" parent="NinePatchRect"]
margin_left = 67.0
margin_top = 45.0
margin_right = 457.0
margin_bottom = 75.0
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "To "

[node name="FromLabel" type="RichTextLabel" parent="NinePatchRect"]
margin_left = 92.0
margin_top = 12.0
margin_right = 499.0
margin_bottom = 42.0
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "From"

[node name="MessageLabel" type="RichTextLabel" parent="NinePatchRect"]
margin_left = 40.0
margin_top = 84.0
margin_right = 472.0
margin_bottom = 211.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Message"

[node name="Option1Button" type="Button" parent="NinePatchRect"]
margin_left = 40.0
margin_top = 220.0
margin_right = 472.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 105, 68 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
group = ExtResource( 2 )
text = "Option 1"

[node name="Option2Button" type="Button" parent="NinePatchRect"]
margin_left = 40.0
margin_top = 260.0
margin_right = 472.0
margin_bottom = 291.0
rect_pivot_offset = Vector2( 260, 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
group = ExtResource( 2 )
text = "Option 2"

[node name="Option3Button" type="Button" parent="NinePatchRect"]
margin_left = 40.0
margin_top = 298.0
margin_right = 472.0
margin_bottom = 329.0
rect_pivot_offset = Vector2( 260, 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
group = ExtResource( 2 )
text = "Option 3"

[node name="Label" type="Label" parent="NinePatchRect"]
margin_left = 16.0
margin_top = 45.0
margin_right = 53.0
margin_bottom = 76.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "To:"

[node name="Label2" type="Label" parent="NinePatchRect"]
margin_left = 16.0
margin_top = 12.0
margin_right = 73.0
margin_bottom = 41.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "From:"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/fade_in = SubResource( 7 )
anims/fade_out = SubResource( 8 )
